tests/fixtures/invalid/round_list_bool.py
# Cannot call round() with List[int], Bool
x = round([1, 2, 3], True)
